# openai-epub-to-audiobook

./: .gitignore  README.md  pyproject.toml
src/epub_to_audiobook/: cli.py  tts_batch.py
tests/: test_cli.py
