[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "openai-epub-to-audiobook"
version = "0.1.0"
description = "Turn EPUB files into audiobook files with OpenAI text cleanup and TTS."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Sidhanth + Codex" }
]
dependencies = [
  "openai>=1.76.0",
]

[project.scripts]
epub-to-audiobook = "epub_to_audiobook.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/epub_to_audiobook"]
